<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:minHeight="128dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="1dp"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/orgImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/organization_avatar_content_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orgNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_org_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#DE000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orgImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orgLoginTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sample_org_login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="#8A000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orgImageView"
            app:layout_constraintTop_toBottomOf="@+id/orgNameTextView" />

        <TextView
            android:id="@+id/orgLocationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/sample_org_location"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orgImageView"
            app:layout_constraintTop_toBottomOf="@+id/orgLoginTextView"
            app:drawableStartCompat="@drawable/ic_location_on_black_24dp" />

        <TextView
            android:id="@+id/orgBlogTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:autoLink="phone|web"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/sample_org_blog"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orgImageView"
            app:layout_constraintTop_toBottomOf="@+id/orgLocationTextView"
            app:drawableStartCompat="@drawable/ic_link_black_24dp" />

        <TextView
            android:id="@+id/orgDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sample_org_desc"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orgImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
