<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_an_organization"
        android:minWidth="250dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:hintAnimationEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/search_edit_text_autofill_hint"
            android:imeOptions="actionSearch"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#202023"
        android:contentDescription="@string/search_button_content_desc"
        android:minWidth="50dp"
        android:src="@drawable/ic_search_white_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/searchBarWidgetGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:constraint_referenced_ids="textInputLayout,searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>